--- a/album14-7-29-01_013.htm
+++ b/album14-7-29-01_013.htm
@@ -32,8 +32,13 @@
 	<OBJECT ID=Snd1 WIDTH=0 HEIGHT=0 CLASSID="CLSID:05589FA1-C356-11CE-BF01-00AA0055595A">
 		<PARAM NAME="FileName" VALUE="cover_pg_audio_web.wav">
 	</OBJECT>
-	<EMBED SRC="cover_pg_audio_web.wav" HIDDEN=TRUE AUTOSTART=TRUE LOOP=FALSE></EMBED>
-
+html
+CopyEdit
+&lt;p&gt;&lt;strong&gt;Click below to hear a portion of the story:&lt;/strong&gt;&lt;/p&gt;
+&lt;audio controls&gt;
+&lt;source src=&quot;cover_pg_audio_web.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
+Your browser does not support the audio element.
+&lt;/audio&gt;
 	<DIV CLASS=F28 STYLE="left:220;top:58;width:262;height:103;color:#000000;">
 		The Vengers -              <BR>
 		The Beginning 
