--- a/album14-7-29-01_015.htm
+++ b/album14-7-29-01_015.htm
@@ -28,7 +28,13 @@
 
 
 <BODY BGCOLOR="#ffffff" TEXT="#ffffff" LINK="#ff0000" VLINK="#800080" ALINK="#FF0000" onLoad="if(V4) OnLoad()">
-	<EMBED SRC="chap1_meet_matt_n_james_audio_web.wav" HIDDEN=TRUE AUTOSTART=TRUE LOOP=FALSE></EMBED>
+html
+CopyEdit
+&lt;p&gt;&lt;strong&gt;Click below to hear a portion of the story:&lt;/strong&gt;&lt;/p&gt;
+&lt;audio controls&gt;
+&lt;source src=&quot;cover_pg_audio_web.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
+Your browser does not support the audio element.
+&lt;/audio&gt;
 
 	<DIV CLASS=F33 STYLE="left:157;top:179;width:314;height:39;color:#000000;">
 		(Part 2: Introducing Matt and James Venger)  
