--- a/album14-7-29-01_038.htm
+++ b/album14-7-29-01_038.htm
@@ -23,7 +23,7 @@
 
 	<DIV STYLE="left:207;top:42;width:389;height:519;">
 		<A HREF="album14-7-29-01_018.htm">
-		<IMG SRC="album14-7-29-01038001.jpg" ALT="" ALIGN=TOP BORDER=0 VSPACE=0 HSPACE=0>
+		<IMG SRC=".album14-7-29-01038001.jpg" ALT="" ALIGN=TOP BORDER=0 VSPACE=0 HSPACE=0>
 		</A>
 	</DIV>
 
